# newrepo

./: .gitignore  AGENTS.md  B2_ACE_DURATION_CONFIRMATION_PROTOCOL_v1.md  B2_MINI_SMOKE_PROTOCOL_v2.md  BENCHMARK_CORE_PROTOCOL_v2.md  BENCHMARK_LAUNCH_REPORT.md  BENCHMARK_PREREG_v1.md  BENCHMARK_PREREG_v2.md  DECISIONS.md  LEDGER.md  LICENSE  PROVENANCE.md  README.md  SA3_FOUNDATION_REPORT.md  SA3_STATE_RESTRICTED_RERUN_RUNBOOK.md  SAO_ENVIRONMENT_REPORT.md  SAO_MINI_SMOKE_REPORT.md  SCORING_STATE_LANES_REPORT.md  SEED_REGISTRY.md  SMOKE_E_RETRY_PROTOCOL_v1.md  SMOKE_PROTOCOL.md  STAGE1_OUTCOME_GATES.md  THIRD_PARTY_LICENSES.md  pyproject.toml
configs/: ace_state_capture_v2.json  ace_state_formal_v2.json  ace_state_preflight_v2.json  automatic_scoring_v2.json  automatic_scoring_v2_sao_shard_000000.json  b2_ace_duration_confirmation_v1.json  b2_mini_smoke_v2.json  benchmark_core_v2.json  benchmark_core_v2_ace_incremental.json  benchmark_core_v2_sao_incremental.json  eligibility_analysis_v2.json  eligibility_scored_state_actions_v2.schema.json  eligibility_state_budget_v2.json  eligibility_state_input_budget_v2.schema.json  foundation_v1.json  foundation_v2.json  human_packet_autoassembly_v2.json  human_packet_autoassembly_v2_sao.json  human_packet_autoassembly_v2_sao_watermarked.json  sa3_state_capture_v2.json  sa3_state_restricted_rerun_v2.json  sao_live_v2.json  smoke_e_retry_v1.json  stage1_outcome_gates_v2.json  stage1_outcome_gates_v2.schema.json  statistics_v2.json
environment/: README.md  gpu-placement-v2.json  licenses.json  package-freeze.txt  runtime.json
prompts/: README.md  build_v2_prompts.py
provenance/: citation_audit_v2.json  weights.manifest.json  (+1 more)
(+245 files in other folders)
